fixed z-index

--- a/style.css
+++ b/style.css
@@ -43,7 +43,6 @@ header {
 	overflow: auto;
 	margin: 0px;
 	padding: 0px;
-	background-color: #000714;
 	color: white;
 	font-family: "Arial Black";
 	font-weight: normal;
@@ -57,7 +56,6 @@ section{
 	margin: 0px;
 	padding: 0px;
 	color: #7A7A7A;
-	position: relative;
 	background-color: white;
 }
 
@@ -68,13 +66,14 @@ footer{
 	overflow: auto;
 	margin: 0px;
 	padding: 0px;
-	position: relative;
 }
 
 canvas{
+	background-color: #000714;
 	position: fixed;
 	top: 0;
 	left: 0;
+	z-index: -1;
 }
 
 /* navigation
